# JOSAAStatisticalModel

./: .gitignore  ARCHITECTURE.md  BAYESIAN_MODEL_HANDOFF.md  JOSAA_Handoff.md  JoSAABae_Article.md  ML_WORKFLOW.md  README.md  netlify.toml
app/: README.md  index.html  package-lock.json  package.json
app/public/data/: encoders.json  metadata.json
app/src/: App.tsx  index.css
app/src/lib/: regression.ts
scraper/: README.md  cleaner.py  crawler.py  pyproject.toml  sample_2023.html  seats.py  test_ml.py  test_playwright.py  test_playwright2.py
scraper/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
scraper/catboost_info/learn/: events.out.tfevents
scraper/catboost_info/test/: events.out.tfevents
scraper/ml/: backtest.py  baseline.py  features.py  train.py
scraper/seat_data/: 2026_seat_matrix.csv
scraper/tests/: test_features.py  test_seats.py
