[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "catboost>=1.2",
    "html5lib>=1.1",
    "lxml>=6.1.1",
    "numpy>=1.26",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]
